<resources>
    <string name="app_name">Proyecto_1S2122</string>
    <string name="confirmar">confirmar</string>
    <string name="atras">atrás</string>
    <string name="aceptar">Aceptar</string>
    <string name="activar">Activar</string>
    <string name="continuar">Continuar</string>

    <string name="introduce_nombre">Introduce tu nombre</string>
    <string name="nombre">nombre</string>
    <string name="introduce_alias">Introduce el alias más chulo que se te ocurra</string>
    <string name="alias">Alias</string>

    <string name="crear_partida">Crear partida</string>
    <string name="unirse_a_partida">Unirse a partida</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="sin_bluetooth">Dispositivo sin Bluetooth</string>
    <string name="sin_bluetooth_descripcion">El dispositivo necesita tener bluetooth para poder usar esta aplicación</string>

    <string name="njugadores">Nº JUGADORES</string>
    <string name="juego">JUEGO</string>
    <string name="reglas_del_juego">REGLAS DEL JUEGO</string>
    <string name="jugadores">Jugadores</string>
    <string name="listo">Listo</string>

    <string name="reintentar">reintentar</string>
    <string name="dispisitivos_encontrados">DISPISITIVOS ENCONTRADOS</string>
    <string name="ya_buscando">Ya se esta realizando la búsqueda</string>
    <string name="partidas_encontradas">PARTIDAS ENCONTRADAS</string>
    <string name="permisos_necesasios">Necesitas aceptar los permisos para poder usar la aplicación</string>
    <string name="permiso_aceptado">Permiso aceptado</string>
    <string name="activar_gps">Búsqueda fallida, compruebe que tiene activada la ubicación gps.</string>

    <string name="pulsar">Pulsar</string>
    <string name="descripcion_pulsar">El que pulse más rápido durante un minuto gana</string>
    <string name="frotar">Frotar</string>
    <string name="descripcion_frotar">Pasa de la parte roja a la verde tantas veces como puedas en un minuto. Ganará el más rápido. Levantar el dedo te hará perder 2 puntos.</string>
    <string name="globos">Globos</string>
    <string name="descripcion_globos">El que explote mas globos en un minuto gana. Los globos rojos te harán perder 3 puntos. Toca fuera del globo para pasar al siguiente.</string>

    <string name="elige_estadisticas">Elige datos a consultar:</string>
    <string name="partidas">Partidas</string>
    <string name="nada_seleccionado">Nada seleccionado</string>
    <string name="todos_jugadores">Todos los jugadores</string>
    <string name="todas_partidas">Todas las partidas</string>
    <string name="partidas_de_jugador">Partidas del jugador:</string>

    <string name="go">GO</string>
    <string name="fin">Fin</string>

</resources>